# F.R.I.D.A.Y

./: README.md  USAGE_GUIDE.md  consent-flow-diagram.mermaid  docker-compose.yml
backend/: Dockerfile  app.py  config.json  context_provider.py  personal_info.json  requirements.txt  start.sh
backend/tools/: mapbox_client.py
frontend/: Dockerfile  default.conf  index.html  nginx.conf  ocv-consent.js  script.js
ocv/backend/: Cargo.toml  Dockerfile
ocv/backend/src/: main.rs
ocv/frontend/: Dockerfile
ocv/frontend/public/: consent.html  index.html
